[model: claude-3.5-sonnet] Development wrapper: Single-command dev server startup
- Dev script: dev.py handles both backend and frontend server startup with dependency checking
- Process management: Graceful startup, monitoring, and shutdown of development servers
- Dependency validation: Automatic checking and installation of Python/Node.js dependencies
- CLI options: --backend-only and --frontend-only flags for selective server startup
- Documentation: Comprehensive DEV_SETUP.md with setup instructions and troubleshooting
- Package integration: Added fin-tasks-dev command to pyproject.toml scripts

One command to start the full development environment!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
 
 [project.scripts]
 fin-tasks = "fin_tasks.main:main"
+fin-tasks-dev = "dev:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
