UI improvement: Move plus button from navigation to TodayView header
- Removed plus button from Navigation component
- Added plus button to TodayView header next to title/description
- Button now appears in context where users view tasks
- Added 'Add Task' text label for better UX
- Positioned using flexbox for proper alignment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.14.0",
+    "@tanstack/react-query-devtools": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
