--- a/alembic.ini
+++ b/alembic.ini
@@ -26,7 +26,7 @@ timezone = UTC
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = sqlite:///./fin-tasks.db
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
