--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dev = [
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
     "httpx>=0.25.0",  # Async HTTP client for testing
+    "aiosqlite>=0.19.0",  # Async SQLite driver for testing
 
     # Code quality
     "black>=23.0.0",
