--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
-        pip install pytest pytest-cov pytest-asyncio httpx
+        pip install -e ".[dev]"
 
     - name: Run database migrations
       run: |
@@ -124,7 +123,7 @@ jobs:
     - name: Install backend dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
+        pip install -e ".[dev]"
 
     - name: Install frontend dependencies
       run: |
