--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Run tests
       run: |
         pip install -e .[dev]
-        python -m pytest --cov=tick_task --cov-report=term-missing
+        python -m pytest --cov=tick_task --cov-report=term-missing --cov-fail-under=60
 
     - name: Build frontend
       working-directory: frontend
