chore: Remove old database file for clean rebranding
- Delete tick-task.db to remove any old FIN-tasks references
- Fresh database will be created on application startup
- Ensures clean slate for new branding and configuration
- No data loss (was just development/test data)

Context: Complete rebranding requires clean database
Decision: Remove old database, let app create fresh one
Alternatives: Migrate database (complex), keep old data (inconsistent)
Trade-offs: Fresh start vs preserving data (fresh start chosen)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fin-tasks-frontend",
+  "name": "tick-task-frontend",
   "version": "0.5.0",
   "type": "module",
-  "description": "Frontend for FIN-tasks - Local-first task management application",
+  "description": "Frontend for tick-task - Local-first task management application",
   "main": "src/main.tsx",
   "scripts": {
     "dev": "vite",
