--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,15 +126,17 @@ python_functions = ["test_*"]
 addopts = [
     "--strict-markers",
     "--strict-config",
+    "--asyncio-mode=auto",
     "--cov=tick_task",
     "--cov-report=term-missing",
     "--cov-report=html:htmlcov",
-    "--cov-fail-under=80",
+    "--cov-fail-under=65",
 ]
 markers = [
     "unit: Unit tests",
     "integration: Integration tests",
     "slow: Slow running tests",
+    "asyncio: async tests",
 ]
 
 # Coverage configuration
