--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
 
     # Database ORM and migrations
     "sqlalchemy[asyncio]>=2.0.0",
+    "aiosqlite>=0.19.0",         # Async SQLite driver
     "alembic>=1.12.0",
 
     # Data validation
