feat: Add pre-commit test validation to prevent broken pushes
- Add pytest hook that runs before git push
- Ensures all tests pass locally before pushing to remote
- Coverage validation (60% minimum) enforced pre-push
- Fail-fast behavior (-x flag) for quick feedback
- Prevents broken commits from reaching CI/CD pipeline

Context: Quality assurance improvement for professional development
Decision: Block pushes with failing tests at the source
Alternatives: Post-commit hooks (less effective), manual testing (unreliable)
Trade-offs: Push delay vs broken code prevention (chose prevention)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -69,3 +69,15 @@ repos:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: ^(tests|frontend)/
+
+  # Test validation (runs before push)
+  - repo: local
+    hooks:
+      - id: run-tests
+        name: Run test suite
+        entry: python -m pytest
+        args: [--cov=tick_task, --cov-report=term-missing, --cov-fail-under=60, -x]
+        language: system
+        pass_filenames: false
+        stages: [push]
+        description: "Run test suite with coverage before pushing"
