ci: Trigger fresh workflow run to clear cache issues
- Added comment to force fresh CI execution
- This should resolve dependency cache issues with aiosqlite
- New workflow run will install all dependencies from scratch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -231,3 +231,4 @@ jobs:
     - name: Test Docker image
       run: |
         docker run --rm fin-tasks:test python test_api.py || true
+# Cache cleared by pushing small change to trigger fresh CI run
