fix: Add PYTHONPATH to pre-commit run-tests hook
- Set PYTHONPATH=src in local hook environment
- Allows test hook to import tick_task module correctly
- Fixes ModuleNotFoundError during pre-commit validation

Context: Local pre-commit hook couldn't find tick_task imports
Decision: Add PYTHONPATH environment variable to hook configuration
Alternatives: Change working directory, modify sys.path in test setup
Trade-offs: Environment variable vs code changes (chose environment)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -79,4 +79,6 @@ repos:
         language: system
         pass_filenames: false
         stages: [push]
+        env:
+          PYTHONPATH: src
         description: "Run test suite with coverage before pushing"
