fix: Resolve PYTHONPATH issue in pre-commit test hook
- Change PYTHONPATH from 'src' to '$PWD/src' for absolute path resolution
- Allows pre-commit hook to find tick_task module correctly
- Verified imports work with the new configuration

Context: ModuleNotFoundError in pre-commit hook due to relative path issue
Decision: Use absolute path with $PWD expansion
Alternatives: Change working directory, use different env var approach
Trade-offs: Absolute path vs relative (chose absolute for reliability)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -80,5 +80,5 @@ repos:
         pass_filenames: false
         stages: [push]
         env:
-          PYTHONPATH: src
+          PYTHONPATH: $PWD/src
         description: "Run test suite with coverage before pushing"
